--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -20,6 +20,4 @@
         <input type="text" id="texto" placeholder="Cuéntanos algo">
         <input type="submit" value="Enviar">
     </form>
-</div>
-</body>
-</html>
+</html>    
